// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkBannerAlertInner should render correctly with "type" attribute equal to "error" 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <section
            class="bpk-banner-alert bpk-banner-alert--error"
            role="alert"
          >
            <div
              class="bpk-banner-alert__header"
            >
              <span
                class="bpk-banner-alert__icon"
              >
                <span
                  class="bpk-banner-alert__error-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
              <span
                class="bpk-banner-alert__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-banner-alert__children-container"
                />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBannerAlertInner should render correctly with "type" attribute equal to "error" and "icon" equal to CurrencyIcon 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <section
            class="bpk-banner-alert bpk-banner-alert--error"
            role="alert"
          >
            <div
              class="bpk-banner-alert__header"
            >
              <span
                class="bpk-banner-alert__icon"
              >
                <span
                  class="bpk-banner-alert__error-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 10.5c5.8 0 10.5-2.015 10.5-4.5S17.8 1.5 12 1.5 1.5 3.515 1.5 6s4.701 4.5 10.5 4.5M1.658 12.83a1.5 1.5 0 0 1 2.012-.673l.001.001C4.886 12.766 7.628 13.5 12 13.5s7.114-.734 8.33-1.342a1.5 1.5 0 0 1 1.36 2.674l-.02.01c-1.785.892-5.042 1.658-9.67 1.658s-7.886-.766-9.67-1.658a1.5 1.5 0 0 1-.673-2.012zm2.012 5.328a1.5 1.5 0 0 0-1.36 2.674l.02.01C4.113 21.734 7.371 22.5 12 22.5s7.886-.766 9.67-1.658a1.5 1.5 0 1 0-1.32-2.694l-.02.01c-1.216.608-3.958 1.342-8.33 1.342s-7.114-.734-8.33-1.342"
                      />
                    </svg>
                  </span>
                </span>
              </span>
              <span
                class="bpk-banner-alert__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-banner-alert__children-container"
                />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBannerAlertInner should render correctly with "type" attribute equal to "neutral" 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <section
            class="bpk-banner-alert bpk-banner-alert--neutral"
            role="alert"
          >
            <div
              class="bpk-banner-alert__header"
            >
              <span
                class="bpk-banner-alert__icon"
              >
                <span
                  class="bpk-banner-alert__neutral-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
              <span
                class="bpk-banner-alert__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-banner-alert__children-container"
                />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBannerAlertInner should render correctly with "type" attribute equal to "primary" 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <section
            class="bpk-banner-alert bpk-banner-alert--primary"
            role="alert"
          >
            <div
              class="bpk-banner-alert__header"
            >
              <span
                class="bpk-banner-alert__icon"
              >
                <span
                  class="bpk-banner-alert__primary-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
              <span
                class="bpk-banner-alert__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-banner-alert__children-container"
                />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBannerAlertInner should render correctly with "type" attribute equal to "success" 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <section
            class="bpk-banner-alert bpk-banner-alert--success"
            role="alert"
          >
            <div
              class="bpk-banner-alert__header"
            >
              <span
                class="bpk-banner-alert__icon"
              >
                <span
                  class="bpk-banner-alert__success-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 22.5C6.201 22.5 1.5 17.799 1.5 12S6.201 1.5 12 1.5 22.5 6.201 22.5 12 17.799 22.5 12 22.5m5.56-12.44a1.5 1.5 0 0 0-2.12-2.12l-4.94 4.939-1.94-1.94a1.5 1.5 0 0 0-2.12 2.122l3 3a1.5 1.5 0 0 0 2.12 0z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
              <span
                class="bpk-banner-alert__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-banner-alert__children-container"
                />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBannerAlertInner should render correctly with "type" attribute equal to "warn" 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <section
            class="bpk-banner-alert bpk-banner-alert--warn"
            role="alert"
          >
            <div
              class="bpk-banner-alert__header"
            >
              <span
                class="bpk-banner-alert__icon"
              >
                <span
                  class="bpk-banner-alert__warn-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
              <span
                class="bpk-banner-alert__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-banner-alert__children-container"
                />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBannerAlertInner should render correctly with a custom banner-alert class name 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <section
            class="bpk-banner-alert bpk-banner-alert--warn custom-class"
            role="alert"
          >
            <div
              class="bpk-banner-alert__header"
            >
              <span
                class="bpk-banner-alert__icon"
              >
                <span
                  class="bpk-banner-alert__warn-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
              <span
                class="bpk-banner-alert__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-banner-alert__children-container"
                />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBannerAlertInner should render correctly with a custom class name 1`] = `
<DocumentFragment>
  <div
    class="custom-class"
  >
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <section
            class="bpk-banner-alert bpk-banner-alert--warn"
            role="alert"
          >
            <div
              class="bpk-banner-alert__header"
            >
              <span
                class="bpk-banner-alert__icon"
              >
                <span
                  class="bpk-banner-alert__warn-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
              <span
                class="bpk-banner-alert__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-banner-alert__children-container"
                />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBannerAlertInner should render correctly with a element based message 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <section
            class="bpk-banner-alert bpk-banner-alert--success"
            role="alert"
          >
            <div
              class="bpk-banner-alert__header bpk-banner-alert__header--expandable"
              role="button"
            >
              <span
                class="bpk-banner-alert__icon"
              >
                <span
                  class="bpk-banner-alert__success-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 22.5C6.201 22.5 1.5 17.799 1.5 12S6.201 1.5 12 1.5 22.5 6.201 22.5 12 17.799 22.5 12 22.5m5.56-12.44a1.5 1.5 0 0 0-2.12-2.12l-4.94 4.939-1.94-1.94a1.5 1.5 0 0 0-2.12 2.122l3 3a1.5 1.5 0 0 0 2.12 0z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
              <span
                class="bpk-banner-alert__message"
              >
                <p>
                  All 
                  <span>
                    good
                  </span>
                </p>
              </span>
              <span
                class="bpk-banner-alert__toggle"
              >
                <button
                  aria-expanded="false"
                  aria-label="View more"
                  class="bpk-banner-alert__toggle-button"
                  title="View more"
                  type="button"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      class="bpk-banner-alert__expand-icon"
                      data-backpack-ds-component="BannerAlertInner"
                      height="1.5rem"
                      viewBox="0 0 24 24"
                      width="1.5rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4.287 7.8a1 1 0 0 1 1.414 0l6.293 6.292L18.287 7.8a1 1 0 1 1 1.438 1.39l-.024.024-7 7a1 1 0 0 1-1.414 0l-7-7a1 1 0 0 1 0-1.414"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-banner-alert__children-container"
                >
                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBannerAlertInner should render correctly with animateOnLeave 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <section
            class="bpk-banner-alert bpk-banner-alert--warn"
            role="alert"
          >
            <div
              class="bpk-banner-alert__header"
            >
              <span
                class="bpk-banner-alert__icon"
              >
                <span
                  class="bpk-banner-alert__warn-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
              <span
                class="bpk-banner-alert__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
              <span
                class="bpk-banner-alert__toggle"
              >
                <button
                  aria-label="Dismiss"
                  class="bpk-close-button__default"
                  data-backpack-ds-component="CloseButton"
                  title="Dismiss"
                  type="button"
                >
                  <span
                    class="bpk-close-button-icon"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-banner-alert__children-container"
                />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBannerAlertInner should render correctly with arbitrary props 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <section
            class="bpk-banner-alert bpk-banner-alert--warn"
            role="alert"
          >
            <div
              class="bpk-banner-alert__header"
            >
              <span
                class="bpk-banner-alert__icon"
              >
                <span
                  class="bpk-banner-alert__warn-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
              <span
                class="bpk-banner-alert__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-banner-alert__children-container"
                />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBannerAlertInner should render correctly with child nodes 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <section
            class="bpk-banner-alert bpk-banner-alert--success"
            role="alert"
          >
            <div
              class="bpk-banner-alert__header bpk-banner-alert__header--expandable"
              role="button"
            >
              <span
                class="bpk-banner-alert__icon"
              >
                <span
                  class="bpk-banner-alert__success-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 22.5C6.201 22.5 1.5 17.799 1.5 12S6.201 1.5 12 1.5 22.5 6.201 22.5 12 17.799 22.5 12 22.5m5.56-12.44a1.5 1.5 0 0 0-2.12-2.12l-4.94 4.939-1.94-1.94a1.5 1.5 0 0 0-2.12 2.122l3 3a1.5 1.5 0 0 0 2.12 0z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
              <span
                class="bpk-banner-alert__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
              <span
                class="bpk-banner-alert__toggle"
              >
                <button
                  aria-expanded="false"
                  aria-label="View more"
                  class="bpk-banner-alert__toggle-button"
                  title="View more"
                  type="button"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      class="bpk-banner-alert__expand-icon"
                      data-backpack-ds-component="BannerAlertInner"
                      height="1.5rem"
                      viewBox="0 0 24 24"
                      width="1.5rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4.287 7.8a1 1 0 0 1 1.414 0l6.293 6.292L18.287 7.8a1 1 0 1 1 1.438 1.39l-.024.024-7 7a1 1 0 0 1-1.414 0l-7-7a1 1 0 0 1 0-1.414"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-banner-alert__children-container"
                >
                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBannerAlertInner should render correctly with dismissable option 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <section
            class="bpk-banner-alert bpk-banner-alert--warn"
            role="alert"
          >
            <div
              class="bpk-banner-alert__header"
            >
              <span
                class="bpk-banner-alert__icon"
              >
                <span
                  class="bpk-banner-alert__warn-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
              <span
                class="bpk-banner-alert__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
              <span
                class="bpk-banner-alert__toggle"
              >
                <button
                  aria-label="Dismiss"
                  class="bpk-close-button__default"
                  data-backpack-ds-component="CloseButton"
                  title="Dismiss"
                  type="button"
                >
                  <span
                    class="bpk-close-button-icon"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-banner-alert__children-container"
                />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBannerAlertInner should render correctly with show set false 1`] = `<DocumentFragment />`;
